# primal-dual-lipa

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
comparison_results.full_repeats/lipa_gpu_mjx_run2/: report.md  results.csv
comparison_results.full_repeats/lipa_gpu_mjx_run3/: report.md  results.csv
comparison_results.full_repeats/lipa_gpu_mjx_run4/: report.md  results.csv
comparison_results.full_repeats/lipa_gpu_mjx_run5/: report.md  results.csv
comparison_results.full_repeats/main_run/acados/: report.md  results.csv
comparison_results.full_repeats/main_run/aligator_casadi/: report.md  results.csv
comparison_results.full_repeats/main_run/aligator_jax/: report.md  results.csv
comparison_results.full_repeats/main_run/csqp_casadi/: report.md  results.csv
comparison_results.full_repeats/main_run/csqp_jax/: report.md  results.csv
comparison_results.full_repeats/main_run/fatrop_casadi/: report.md  results.csv
comparison_results.full_repeats/main_run/fatrop_jax/: report.md  results.csv
comparison_results.full_repeats/main_run/fatrop_jax_analytical/: report.md  results.csv
comparison_results.full_repeats/main_run/ipopt_casadi/: report.md  results.csv
comparison_results.full_repeats/main_run/ipopt_jax/: report.md  results.csv
comparison_results.full_repeats/main_run/ipopt_jax_analytical/: report.md  results.csv
comparison_results.full_repeats/main_run/lipa_cpu/: report.md  results.csv
comparison_results.full_repeats/main_run/lipa_gpu/: report.md  results.csv
comparison_results.full_repeats/main_run/merged/: report.md  results.csv
comparison_results.full_repeats/main_run/sip_casadi/: report.md  results.csv
comparison_results.full_repeats/main_run/sip_jax/: report.md  results.csv
comparison_results.full_repeats/main_run/trajax/: report.md  results.csv
primal_dual_lipa/: __init__.py  integrators.py  kkt_builder.py  kkt_helpers.py  lagrangian_helpers.py  optimizers.py  topology.py  types.py  vectorization_helpers.py
tests/: dymos_tree_problems.py  helpers.py  kkt.py  test_acrobot.py  test_cartpole.py  test_dymos_tree.py  test_kkt_builder.py  test_kkt_helpers.py  test_mpc_aliengo_trot.py  test_mpc_barrel_roll.py  test_mpc_h1_backflip.py  test_mpc_h1_jump_forward.py  test_quadpendulum.py  test_quadratic_problem.py  test_solver_modes.py  test_tree_kkt.py  test_tree_ocp.py
tests/comparison/: Dockerfile  Dockerfile.dockerignore  README.md  __init__.py  acados_install.md  aligator_install.md  casadi_jax_callback.py  fatrop_install.md  known_timeouts.py  merge_reports.py  problem_spec.py  render_solution_frames.py  report.py  run_all.sh  run_benchmark.py  run_full_with_repeats.sh  run_one.py  sip_kkt_perm.py  test_kkt_breakdown.py  test_solution_archives.py  trajax_install.md  warm_starts.py
tests/comparison/_dev/: lipa_warm_cache.py
tests/comparison/adapters/: __init__.py  acados.py  aligator.py  base.py  csqp.py  fatrop.py  fatrop_mjx.py  ipopt_casadi.py  ipopt_mjx_sparse.py  lipa.py  sip.py  sip_mjx.py  trajax.py
tests/comparison/install/: _lib.sh  install_acados.sh  install_aligator.sh  install_all.sh  install_fatrop.sh  install_pip_deps.sh  install_trajax.sh
tests/comparison/problems/: __init__.py  _mjx_base.py  acrobot.py  cartpole.py  mjx_aliengo_trot.py  mjx_backflip.py  mjx_barrel_roll.py  mjx_h1_backflip.py  mjx_h1_jump_forward.py  mjx_jump.py  mjx_trot.py  quadpendulum.py
tests/mpc_examples/: __init__.py  fetch_assets.py  models.py  objectives.py  offline_solver.py  references.py  run_offline.py  viz.py
tests/mpc_examples/configs/: _aliengo_base.py  config_aliengo_trot.py  config_barrel_roll.py  config_h1_backflip.py  config_h1_jump_forward.py
