[project]
name = "primal-dual-lipa"
version = "0.1"
requires-python = ">= 3.12"
dependencies = [
  "jax[cpu]; platform_system != \"Linux\"",
  "jax[cuda12]; platform_system == \"Linux\"",
  "regularized_lqr_jax @ git+https://github.com/joaospinto/regularized_lqr_jax@9d4240060b0de4726d9b745c3e134994998f4fbb",
]
authors = [
  {name = "Joao Sousa-Pinto", email = "joaospinto@gmail.com"},
]
description = "Implements https://arxiv.org/abs/2509.16370"
license = "MIT"

[project.optional-dependencies]
lint = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ARG005", "D203", "D213", "COM812", "N803", "N806", "N815", "PLC2401", "PLR0913", "FBT001", "FBT002", "RUF001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["primal-dual-lipa"]
