[project]
name = "primal-dual-lipa"
version = "0.1"
requires-python = ">= 3.12"
dependencies = [
  "jax[cpu]; platform_system != \"Linux\"",
  "jax[cuda12]; platform_system == \"Linux\"",
  "regularized_lqr_jax @ git+https://github.com/joaospinto/regularized_lqr_jax@ae4429fb485da165b17fc9ec715ff70893e47ee1",
]
authors = [
  {name = "Joao Sousa-Pinto", email = "joaospinto@gmail.com"},
]
description = "Implements https://arxiv.org/abs/2509.16370"
license = "MIT"

[project.optional-dependencies]
test = ["matplotlib"]
lint = ["ruff"]
mpc-examples = ["mujoco", "mujoco-mjx", "matplotlib", "imageio[ffmpeg]"]

[dependency-groups]
# Other-solver adapters used by the LIPA-vs-SOTA comparison driver in
# tests/comparison/. aligator and acados are intentionally NOT listed here:
# aligator's PyPI sdist is broken (it's a CMake project; install via
# conda-forge), and acados requires a manual CMake build of the C library.
# See tests/comparison/README.md. Each adapter degrades gracefully if its
# solver is not importable.
#
# Note: we use CasADi's bundled IPOPT (i.e. `casadi.nlpsol('solver',
# 'ipopt', nlp)`) rather than cyipopt because cyipopt requires a system
# IPOPT install via pkg-config, which we don't necessarily have. CasADi
# bundles IPOPT inside the wheel, so it Just Works.
comparisons = [
  "casadi",
  # mim-solvers 0.2.0 is built against libpinocchio 3.8.0 — pin to match
  # so the runtime linker finds the right SO version.
  "pin==3.8.*",
  "crocoddyl",
  "mim-solvers",
  "matplotlib",
  "tabulate",
  # sip_python — the SIP solver from the same author as LIPA. Wheel
  # ships on PyPI (Linux/macOS/Windows, Python 3.10–3.13).
  "sip-python>=0.0.4",
  "cvxopt>=1.3.3",
  # Google's Trajax is installed direct from git. The `trajax` name on
  # PyPI is a DIFFERENT (unrelated MPPI/MPCC) library, so we use the
  # PEP 508 direct-URL form to bypass PyPI resolution entirely
  # (mirrors the regularized_lqr_jax line above). Pinned to a SHA so
  # `uv sync` is reproducible — bump as needed.
  "trajax @ git+https://github.com/google/trajax",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ARG005", "D203", "D213", "COM812", "N803", "N806", "N815", "PLC2401", "PLR0913", "FBT001", "FBT002", "RUF001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["primal_dual_lipa"]
